--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,15 +14,24 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Upload vip_front.zip to S3
+      - name: Setup AWS Credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ap-northeast-2
 
+      - name: Make ZIP (vip_back.zip)
+        run: |
+          zip -r vip_back.zip \
+            appspec.yml \
+            pom.xml \
+            scripts \
+            src \
+            Dockerfile || true
+
       - name: Upload ZIP to S3
-        run: aws s3 cp vip_front.zip s3://lumiticketing-project-03230316/vip_front_build.zip
+        run: aws s3 cp vip_back.zip s3://lumiticketing-project-03230316/vip_back_build.zip
 
       - name: Trigger CodeDeploy
         env:
@@ -33,5 +42,5 @@ jobs:
             --application-name LumiTicketing \
             --deployment-group-name LumiTicketing-VIP \
             --file-exists-behavior OVERWRITE \
-            --s3-location bucket=lumiticketing-project-03230316,bundleType=zip,key=vip_front_build.zip \
+            --s3-location bucket=lumiticketing-project-03230316,bundleType=zip,key=vip_back_build.zip \
             --region ap-northeast-2
