--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,18 +15,19 @@ spring.mvc.view.suffix=.jsp
 # file settings
 spring.servlet.multipart.max-file-size=10MB
 
-# server port settings
-server.port=80
-
 spring.data.redis.host=clustercfg.redis-vip-cluster.i9mum9.apn2.cache.amazonaws.com
 spring.data.redis.port=6379
 spring.data.redis.ssl.enabled=true
 
+server.servlet.session.cookie.name=SESSION
 server.servlet.session.cookie.domain=lumiticketing.click
-server.servlet.session.cookie.same-site=none
+server.servlet.session.cookie.same-site=NONE
 server.servlet.session.cookie.secure=true
-
-
-
 server.servlet.session.cookie.path=/
 
+
+# server port settings
+server.port=80
+
+
+spring.session.store-type=redis
